--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,19 @@
-<p>navbar works!</p>
+<nav class='navbar navbar-inverse navbar-fixed-top'>
+    <div class='container-fluid'>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">WebSiteName</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li class="active" class="glyphicon glyphicon-user"><a href="#">User</a></li>
+              <li><a href="#">Repository</a></li>
+            </ul>
+        </div>
+    
+    </div>
+</nav>
