edited the nav bar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,13 +7,12 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">WebSiteName</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active" class="glyphicon glyphicon-user"><a href="#">User</a></li>
-              <li><a href="#">Repository</a></li>
+              <li class="active"><a href="#">Github User</a></li>
+              <li><a href="#">Github Repository</a></li>
             </ul>
-        </div>
-    
+          </div>
     </div>
 </nav>
