--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,14 @@
-<nav class='navbar navbar-inverse navbar-fixed-top'>
+<nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
     <div class='container-fluid'>
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">WebSiteName</a>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Github User</a></li>
-              <li><a href="#">Github Repository</a></li>
-            </ul>
-          </div>
+        <a class="navbar-brand" href="#"><b>GITHUG SEARCH</b></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" routerLink="goals" routerLinkActive='active'>User<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" routerLink="/about" routerLinkActive='active'>Repository</a>
+            </div>
+        </div>
     </div>
 </nav>
