updated the repo and user form components

--- a/src/app/repo-form/repo-form.component.html
+++ b/src/app/repo-form/repo-form.component.html
@@ -1,8 +1,8 @@
-<form (ngSubmit)='submitUser()' #userForm='ngForm'>
+<form (ngSubmit)='submitRepo()' #repoForm='ngForm'>
     <div class="form-group">
-        <input type="text" class="form-control" id="username" placeholder="Enter username" [(ngModel)]="newUser.username" username="name" #username='ngModel' required>
-        <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
-          <p>Name is required</p>
+        <input type="text" class="form-control" id="repo-name" placeholder="Enter repository name" [(ngModel)]="newrepo.repo-name" name="repo-name" #repo-name='ngModel' required>
+        <div [hidden]="repo-name.valid || repo-name.pristine" class="alert alert-danger">
+          <p>Repository name is required</p>
         </div>
     </div>
     <button type='submit' class='btn btn-primary'>Submit</button>
