created not found-component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,8 +6,8 @@
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" routerLink="goals" routerLinkActive='active'>User<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" routerLink="/about" routerLinkActive='active'>Repository</a>
+                <a class="nav-item nav-link active" routerLink="user" routerLinkActive='active'>User<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" routerLink="/repository" routerLinkActive='active'>Repository</a>
             </div>
         </div>
     </div>
