--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,9 +1,9 @@
-<form (ngSubmit)='submitUser()' #userForm='ngForm'>
+<form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
     <div class="form-group">
-        <input type="text" class="form-control" id="username" placeholder="Enter username" (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm" name="username" [(ngModel)]= "searchInfo.find"  #find='ngModel' required>
-        <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
+        <input type="text" class="form-control" id="username" placeholder="Enter username" name="find" [(ngModel)]= "searchInfo.find"  #find='ngModel' required>
+        <!-- <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
           <p>Name is required</p>
-        </div>
+        </div> -->
     </div>
     <button type='submit' class='btn btn-primary'>Submit</button>
 </form>
