--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,32 +1,67 @@
-<ng-progress></ng-progress>
-<app-user-form (getName)='findUser($event)'></app-user-form>
 <div class="container">
+  <ng-progress></ng-progress>
+  <div class="row ">
+    <div class="col-md-12">
+      <app-user-form (getName)='findUser($event)'></app-user-form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-7">
+      <div class="table table-striped table-bordered">
         <h3> {{users.name}}</h3>
-            <p>Github Username:<p>
-            <a href="{{users.html_url}}" target="_blank">{{users.login}}</a>
+        <table class="table table-striped table-light">
+          <tbody>
+          <tr>
+            <th scope="row">Github Username:</th>
+              <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
 
-            <span>Repositories:</span>
-            <span>{{users.public_repos }}</span>
-            <span>Date created:</span>
-            <span>{{users.created_at | date}}</span>
-            <span>Followers:</span>
-            <span>{{users.followers}}</span>
-            <span>Following</span>
-            <span>{{users.following}}</span>
-</div>
-<div class="col-md-5 image-end">
-   <img src="{{users.avatar_url}}">
+          </tr>
+          <tr>
+            <th scope="row">Repositories:</th>
+            <td>{{users.public_repos }}</td>
+          </tr>
+          <tr>
+            <th scope="row">Date created:</th>
+            <td>{{users.created_at | date}}</td>
+          </tr>
+          <tr>
+            <th scope="row">Followers:</th>
+            <td>{{users.followers}}</td>
+          </tr>
+          <tr>
+            <th scope="row">Following</th>
+            <td>{{users.following}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    
+    <div class="col-md-5 image-end">
+      <img src="{{users.avatar_url}}">
+    </div>
+  </div>
+  <hr>
 </div>
 <div class="container">
   <div class="row">
     <div  class="col-md-12">
       <h2 style="color: #056b5b" > User Repositories</h2>
-          <p *ngFor='let repository of userRepos.newRepository'>
-            <a href="{{repository.html_url}}" target="_blank" >{{repository.name}}</a>
+      <div class="table table-striped">
+        <table class="table">
+          <tbody>
+          <tr *ngFor='let repository of userRepos.newRepository'>
+            <td>
+                <a href="{{repository.html_url}}" target="_blank" >{{repository.name}}</a>
+
                 <br>
-            <p class="desc">Description: {{repository.description}}</p>
+              <p class="desc">Description: {{repository.description}}</p>
               <br>
               <p>Date Created: {{repository.created_at | date}}</p>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-</div>  
-</div> 
+  </div>
+</div>
