--- a/src/app/repo-form/repo-form.component.html
+++ b/src/app/repo-form/repo-form.component.html
@@ -1,9 +1,8 @@
-<form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
+<form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm" class="form-inline">
     <div class="form-group">
         <input type="text" class="form-control" id="name" placeholder="Enter repository name"name="name" [(ngModel)]= "searchInfo.find"  #find='ngModel'required>
-        <!-- <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-          <p>Repository name is required</p>
-        </div> -->
-    </div>
-    <button type='submit' class='btn btn-primary'>Submit</button>
-</form>
+    </div>&nbsp;&nbsp;
+    <button type='submit' class='btn btn-secondary'><i class="fas fa-search"></i> Search</button>
+</form><br><br>
+
+
