--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,15 +6,19 @@
     </div>
   </div>
   <div class="row">
+    <div class="col-md-5">
+      <div class="card">
+        <div class="card-header"><h3>{{users.name}}</h3></div>
+        <div class="card-img-top"><img src="{{users.avatar_url}}"></div>
+      </div>
+    </div>
     <div class="col-md-7">
-      <div class="table table-striped table-bordered">
-        <h3> {{users.name}}</h3>
+      <div class="table table-striped">
         <table class="table table-striped table-light">
           <tbody>
           <tr>
             <th scope="row">Github Username:</th>
-              <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
-
+              <td><a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
           </tr>
           <tr>
             <th scope="row">Repositories:</th>
@@ -35,9 +39,6 @@
           </tbody>
         </table>
       </div>
-    
-    <div class="col-md-5 image-end">
-      <img src="{{users.avatar_url}}">
     </div>
   </div>
   <hr>
@@ -45,23 +46,16 @@
 <div class="container">
   <div class="row">
     <div  class="col-md-12">
-      <h2 style="color: #056b5b" > User Repositories</h2>
-      <div class="table table-striped">
-        <table class="table">
-          <tbody>
-          <tr *ngFor='let repository of userRepos.newRepository'>
-            <td>
-                <a href="{{repository.html_url}}" target="_blank" >{{repository.name}}</a>
-
-                <br>
-              <p class="desc">Description: {{repository.description}}</p>
-              <br>
-              <p>Date Created: {{repository.created_at | date}}</p>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
+      <h2 style="color: #056b5b"> User Repositories</h2><br>
+          <div class='row'>
+          <div *ngFor='let repository of userRepos.newRepository' class='card col-md-6'>
+            <div class='card-body'>
+              <h3>{{repository.name}}</h3><br>
+              <p class="desc"><strong>Description: </strong>{{repository.description}}</p>
+              <p><strong>Created: </strong> {{repository.created_at | date | dayCount}}</p>
+              <button class='btn btn-success'><a href="{{repository.html_url}}" target="_blank">View the project</a></button>
+            </div>
+       </div>
     </div>
   </div>
 </div>
