--- a/src/app/repo/repo.component.html
+++ b/src/app/repo/repo.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <ng-progress></ng-progress>
   <div class="row ">
-  <div class="col-md-9 text-center">
+  <!-- <div class="col-md-9 text-center">
     <app-repo-form (getName)='searchRepos($event)'></app-repo-form>
-  </div>
+  </div> -->
 </div>
 <div class="row">
   <div class="col-md-11">
