--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -8,7 +8,6 @@
   <div class="row">
     <div class="col-md-5">
       <div class="card">
-        <div class="card-header"><h3>{{users.name}}</h3></div>
         <div class="card-img-top"><img src="{{users.avatar_url}}"></div>
       </div>
     </div>
@@ -16,9 +15,14 @@
       <div class="table table-striped">
         <table class="table table-striped table-light">
           <tbody>
+            <h2>{{users.name}}</h2>
           <tr>
             <th scope="row">Github Username:</th>
               <td><a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
+          </tr>
+          <tr>
+            <th scope="row">About:</th>
+            <td>{{users.bio}}</td>
           </tr>
           <tr>
             <th scope="row">Repositories:</th>
@@ -38,24 +42,9 @@
           </tr>
           </tbody>
         </table>
-      </div>
+      </div><br>
+      <button class='btn btn-success form-control'(click)='goToUrl(users.name)'>Click to view the user's repositories</button>
     </div>
   </div>
   <hr>
-</div>
-<div class="container">
-  <div class="row">
-    <div  class="col-md-12">
-      <h2 style="color: #056b5b"> User Repositories</h2><br>
-          <div class='row'>
-          <div *ngFor='let repository of userRepos.newRepository' class='card col-md-6'>
-            <div class='card-body'>
-              <h3>{{repository.name}}</h3><br>
-              <p class="desc"><strong>Description: </strong>{{repository.description}}</p>
-              <p><strong>Created: </strong> {{repository.created_at | date | dayCount}}</p>
-              <button class='btn btn-success'><a href="{{repository.html_url}}" target="_blank">View the project</a></button>
-            </div>
-       </div>
-    </div>
-  </div>
 </div>
