removed the token

--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -10,8 +10,8 @@
 
         <div *ngIf="repoitems" >
             <div class="card" *ngFor='let item of repoitems'>
-                <div class="card-body" appHighlight>
-                    <h3><a href="{{item.html_url}}" target="_blank"><strong>{{item.name}}</strong></a></h3><br>
+                <div class="card-body" >
+                    <h3><a href="{{item.html_url}}" target="_blank"><strong appHighlight>{{item.name}}</strong></a></h3><br>
                     <p><strong>Created:</strong> {{item.created_at|dayCount}}</p>
                     <p><strong>Created by:</strong> {{item.owner.login}}</p>
                     <p><strong>Language used:</strong> {{item.language}}</p>
